crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__complex_newline_preservation-6.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: content3
---
// New header



function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
