crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__complex_newline_preservation.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
---
<file_content path="[TEMP_DIR]/test.txt">


// Header comment


function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}

// Footer comment
</file_content>
