crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__empty_block-2.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: final_content
---
    First Line    
    Last Line
