crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__empty_block.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
---
<file_content path="[TEMP_DIR]/test.txt">
    First Line    
    Last Line
</file_content>
