crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__empty_search_new_file-2.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: final_content
---
New content
