crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__empty_search_new_file.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
---
<file_content path="[TEMP_DIR]/test.txt">
New content
</file_content>
