crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__error_messages-2.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: io_err.to_string()
---
File operation failed: No such file or directory (os error 2)
