crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__error_messages.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: err.to_string()
---
File not found at path: nonexistent.txt
